Restore some variables - one still in use so we'll keep the set

--- a/packages/perseus/src/styles/variables.less
+++ b/packages/perseus/src/styles/variables.less
@@ -8,20 +8,20 @@
 @blue: #1c758a;
 @red: #ffbaba;
 
-// @white: #ffffff;
-// @gray98: #fafafa;
-// @gray97: #f6f7f7;
-// @gray95: #f0f1f2;
-// @gray90: #e3e5e6;
-// @gray85: #d6d8da;
-// @gray76: #babec2;
-// @gray68: #888d93;
-// @gray41: #626569;
-// @gray25: #3b3e40;
-// @gray17: #21242c;
+@white: #ffffff;
+@gray98: #fafafa;
+@gray97: #f6f7f7;
+@gray95: #f0f1f2;
+@gray90: #e3e5e6;
+@gray85: #d6d8da;
+@gray76: #babec2;
+@gray68: #888d93;
+@gray41: #626569;
+@gray25: #3b3e40;
+@gray17: #21242c;
 
-// // Media query breakpoints
-// // --------------------------------------------------
+// Media query breakpoints
+// --------------------------------------------------
 
 // Kept in sync from Pure's default breakpoints: http://purecss.io/grids/
 
